<resources>
        <string name="app_name">嗨抢</string>
        <string name="Is_upload">正在上传...</string>
        <string name="login_common_information">基本信息</string>
        <string name="login_set_information_phone">请正确输入，否则不能提现哦!</string>
        <string name="login_register_phonehint">请输入要注册的手机号</string>
        <string name="login_password_psd_nonull">密码不能为空</string>
        <string name="login_setting_name">昵称</string>
        <string name="login_setting_angle">angle</string>
        <string name="login_setting_sex">性别</string>
        <string name="login_setting_city">常住地</string>
        <string name="login_setting_city_name">北京市中关村</string>
        <string name="login_setting_age">年龄</string>
        <string name="login_setting_photo">上传新头像</string>
        <string name="login_register_resend">秒后重新发送</string>
        <string name="login_setting_woman">女</string>
        <string name="login_setting_man">男</string>
        <string name="login_prefix_phone">手机区号</string>
        <string name="login_forget_pwd">忘记密码</string>
        <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
        <string name="logining">使用%s帐号登录中…</string>
        <string name="auth_cancel">授权操作已取消</string>
        <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
        <string name="auth_complete">授权成功，正在跳转登录操作…</string>
        <string name="if_register_needed">如果您需要注册功能…</string>
        <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>
        <string name="hello_world">Hello world!</string>
        <string name="action_settings">Settings</string>
        <string name="title_activity_main">MainActivity</string>
        <string name="nav">游记</string>
        <string name="biz_plugin_search_hint">搜索标题、正文、景点、目的地</string>
        <string name="title_activity_aty_destination_top">AtyDestinationTop</string>
        <string name="title_activity_aty_destination_attraction">AtyDestinationAttraction</string>
        <string name="title_activity_aty_picture_box">AtyPictureBox</string>
        <string name="viewpager_indicator">%1$d/%2$d</string>
        <string name="browse">浏览</string>
        <string name="begin_trip">开始旅程</string>
        <string name="refresh_down_text">下拉刷新</string>
        <string name="refresh_release_text">松开后刷新</string>
        <string name="title_activity_aty_destination_reviews_list">AtyDestinationReviewsList</string>
    <string name="title_activity_aty_destination_reviews_list_detail">
        AtyDestinationReviewsListDetail
    </string>
        <string name="main_mine_title">我的一大帮</string>
        <string name="main_mine_gonglue">攻略</string>
        <string name="main_mine_answer">问答</string>
        <string name="main_mine_message">点评</string>
        <string name="main_mine_website">个人主页</string>
        <string name="main_mine_infor">我的资料</string>
        <string name="main_mine_event">我的活动</string>
        <string name="main_mine_quan">我的圈子</string>
        <string name="main_mine_comment">我的评论</string>
        <string name="main_mine_collect_title">我的收藏</string>
        <string name="main_mine_collect">我的收藏</string>
        <string name="main_mine_collect_delete_tip">如果你删除此收藏，将会是彻底删除，再也找不到了，确定删除？</string>
        <string name="main_mine_confirm_delete">确定删除</string>
        <string name="main_mine_cancel_delete">取消</string>
        <string name="main_mine_tuiguang">我的推广</string>
        <string name="main_mine_package">我的钱包</string>
        <string name="main_mine_friend">我的好友</string>
        <string name="common_text_delete">删除</string>
        <string name="common_text_sure">确定</string>
        <string name="common_text_cancel">取消</string>
        <string name="common_web_preview">网页预览</string>
        <string name="common_exit_again">再按一次退出</string>
        <string name="common_text_update">修改</string>
        <string name="common_text_phone">手机号</string>
        <string name="common_text_wechat">微信</string>
        <string name="common_text_qq">腾讯QQ</string>
        <string name="common_text_weibo">微博</string>
        <string name="common_text_more">更多</string>
        <string name="common_text_search">搜索</string>
        <string name="common_text_receive">接受</string>
        <string name="common_text_reject">拒绝</string>
        <string name="common_text_nextstep">下一步</string>
        <string name="common_text_empty_search">请先输入搜索关键字</string>
        <string name="common_text_finish">完成</string>
        <string name="common_text_internal">国内</string>
        <string name="common_text_external">国外</string>
        <string name="common_text_camera">相机拍照</string>
        <string name="common_text_album">本地照片</string>
        <string name="common_text_error_net">网络错误，请重试</string>
        <string name="common_text_client_error">客户端出错</string>
        <string name="common_text_server_error">服务端出错</string>
        <string name="common_loading_no_data">暂无数据！</string>
        <string name="common_loading_data">玩命加载中...</string>
        <string name="common_loading_finish">已全部加载完成</string>
        <string name="common_loading_error">网络错误,点击重新加载</string>
        <string name="common_loading_click_refresh">暂无数据，请重新选择</string>
        <string name="common_text_refresh_failed">刷新失败</string>
        <string name="main_tab_travel">游记</string>
        <string name="main_tab_partner">约伴</string>
        <string name="main_tab_quan">圈子</string>
        <string name="main_tab_event">活动</string>
        <string name="main_tab_mine">我的</string>
        <string name="main_travel_tab_terminal">目的地</string>
        <string name="main_travel_tab_hot">热门</string>
        <string name="main_travel_tab_select">筛选</string>
        <string name="main_travel_add_travel">发表游记</string>
        <string name="main_travel_title">游记标题</string>
        <string name="main_travel_topic">主题</string>
        <string name="main_travel_way">出行方式</string>
        <string name="main_travel_money">人均消费</string>
        <string name="main_travel_cover">游记封面</string>
        <string name="main_travel_content_hint">游记正文（如只需要上传图片可不用填写文字）</string>
        <string name="main_travel_pic_hint">添加图片（单次可上传9张图片，更多图片请提交后继续添加游记内容...）</string>
        <string name="main_travel_location">地点</string>
        <string name="main_travel_data">日期</string>
        <string name="main_travel_time">时间段</string>
        <string name="main_travel_commit">游记编辑</string>
        <string name="main_travel_review">预览游记</string>
        <string name="main_travel_sure">确认提交</string>
        <string name="main_travel_setting">设置游记</string>
        <string name="main_travel_save">存草稿箱</string>
        <string name="main_travel_delete">删除游记</string>
        <string name="main_travel_sure_hint_title">是否为原创</string>
        <string name="main_travel_sure_hint_content">1.原创游记发布审核通过后，一大帮将按照您的游记访问量每月支付酬金，永久的哦！\n2.推荐您的朋友在一大帮发表游记，您将无限期获得ta的游记收入佣金提成</string>
        <string name="main_travel_add_pic_content">点击添加图片描述</string>
        <string name="main_travel_pic_content_num">%1$s/150字</string>
        <string name="main_travel_pic">游记图片</string>
        <string name="main_travel_terminal_comment">评论</string>
        <string name="main_travel_terminal_comment_detail">点评详情</string>
        <string name="main_travel_terminal_add_comment">添加评论</string>
        <string name="main_travel_gonglue_all">全部</string>
        <string name="main_travel_gonglue_view">景点</string>
        <string name="main_travel_gonglue_food">美食</string>
        <string name="main_travel_gonglue_shopping">购物</string>
        <string name="main_travel_gonglue_hotel">住宿</string>
        <string name="main_travel_gonglue_traffic">交通</string>
        <string name="main_travel_gonglue_erperience">经验</string>
        <string name="main_travel_gonglue_detail">攻略详情</string>
        <string name="main_travel_gonglue_wei">微攻略</string>
        <string name="main_travel_gonglue_more">查看更多攻略</string>
        <string name="main_travel_comment_more">查看更多评论</string>
        <string name="main_travel_terminal_rel_travel">相关游记</string>
        <string name="main_travel_terminal_rel_answer">相关问答</string>
        <string name="main_travel_gonglue_add">写微攻略</string>
        <string name="main_travel_comment_add">写评论</string>
        <string name="main_travel_codition_title">筛选</string>
        <string name="main_travel_gonglue_add_hint">攻略内容\n温馨提示小Tips,惊喜新发现~分享亲身经验，千万游友等不及向你取经啦！</string>
        <string name="main_travel_gonglue_add_pic_hint">添加图片（单次可添加9张图片）</string>
        <string name="main_travel_terminal_go">想去</string>
        <string name="main_travel_terminal_gone">去过</string>
        <string name="main_travel_terminal_parent_hint">朋友与你同行</string>
        <string name="main_travel_terminal_quan_hint">个圈子</string>
        <string name="main_travel_terminal_travel_hint">篇真实体验</string>
        <string name="main_travel_terminal_gonglue_hint">个深度游玩攻略</string>
        <string name="main_travel_terminal_answer_hint">条当地问答</string>
        <string name="main_travel_terminal_comment_hint">条目的地评论</string>
        <string name="main_travel_terminal_quan_owner">圈主</string>
        <string name="main_travel_terminal_quan_member">圈子成员</string>
        <string name="main_travel_terminal_quan_huodong">圈子活动</string>
        <string name="main_travel_terminal_quan_tiezi">圈子帖子</string>
        <string name="main_travel_terminal_quan_join">加入</string>
        <string name="main_travel_terminal_quan_sign">签到</string>
        <string name="main_travel_terminal_quan_tiezi_detail">帖子详情</string>
        <string name="main_travel_terminal_quan_event_detail">活动详情</string>
        <string name="main_travel_terminal_answer_question">我要提问</string>
        <string name="main_travel_terminal_answer_queetion_hint">您有什么问题寻求当地车友帮助？\n请详细描述一下问题...（不超过500字）</string>
        <string name="main_travel_terminal_quan_event_introduce">活动介绍</string>
        <string name="main_travel_terminal_quan_event_date">活动行程</string>
        <string name="main_travel_terminal_quan_event_comment">活动评论</string>
        <string name="main_travel_terminal_quan_event_join">我要报名</string>
        <string name="main_travel_terminal_quan_event_quit">取消报名</string>
        <string name="main_travel_terminal_quan_event_want_comment">我要报名</string>
        <string name="main_travel_event_remark">备注：</string>
        <string name="main_travel_event_breakfast">早餐：</string>
        <string name="main_travel_event_launcher">午餐：</string>
        <string name="main_travel_event_dinner">晚餐：</string>
        <string name="main_travel_event_transfer">交通：</string>
        <string name="main_travel_event_time">活动时间</string>
        <string name="main_travel_event_from">出发地</string>
        <string name="main_travel_event_to">目的地</string>
        <string name="main_travel_event_introduct">活动概况</string>
        <string name="main_travel_event_fee">费用说明</string>
        <string name="main_travel_event_joined">已报名</string>
        <string name="main_travel_popup_recommend">推荐</string>
        <string name="main_travel_popup_hot">热门</string>
        <string name="main_travel_popup_new">最新</string>
        <string name="main_travel_popup_my_travel">我的游记</string>
        <string name="main_travel_popup_new_travel">发布游记</string>
        <string name="main_parnter_status">约伴中</string>
        <string name="main_parnter_from">始发地</string>
        <string name="main_parnter_to">目的地</string>
        <string name="main_parnter_time">时    间</string>
        <string name="ok">确定</string>
        <string name="cancel">取消</string>
        <string name="prompt">提示</string>
        <string name="button_search">查找</string>
        <string name="logout">退出登录</string>
        <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
        <string name="group_id">群ID</string>
        <string name="search_pubic_group">搜索公开群</string>
</resources>