<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp10" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_album"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/dp10"
            android:paddingLeft="@dimen/dp10"
            android:text="@string/common_text_album"
            android:drawableLeft="@drawable/ic_album"
            android:background="@drawable/selector_btn_white_top_corner"
            android:textColor="@color/common_blue"
            android:textSize="@dimen/sp15" />
        
        <View android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/common_splitline"/>
        
        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:text="@string/common_text_camera"
            android:drawableLeft="@drawable/ic_camera"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/dp10"
            android:paddingLeft="@dimen/dp10"
            android:background="@drawable/selector_btn_white_bottom_corner"
            android:textColor="@color/common_blue"
            android:textSize="@dimen/sp15" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_marginTop="@dimen/dp10"
            android:gravity="center"
            android:background="@drawable/selector_btn_white_corner"
            android:text="@string/common_text_cancel"
            android:textColor="@color/common_blue"
            android:textSize="@dimen/sp15" />
    </LinearLayout>

</LinearLayout>