<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp46"
        android:background="@color/top_bar_normal_bg"
        android:gravity="center_vertical" >

        <include layout="@layout/commom_back_btn" />

        <TextView
            android:id="@+id/add_list_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/search_pubic_group"
            android:textColor="#fff"
            android:textSize="@dimen/sp18" />

        <Button
            android:id="@+id/search"
            android:layout_width="@dimen/dp54"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/common_tab_bg"
            android:onClick="searchGroup"
            android:text="@string/button_search"
            android:textColor="#fff"
            android:textSize="@dimen/sp16" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_search_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp39"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/button_normal_shape"
        android:hint="@string/group_id"
        android:paddingLeft="@dimen/dp5"
        android:singleLine="true"
        android:textColorHint="#b3b3b3"
        android:textSize="@dimen/sp18" />

    <RelativeLayout
        android:id="@+id/rl_searched_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:onClick="enterToDetails"
        android:background="@drawable/mm_listitem"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/dp45"
            android:layout_height="@dimen/dp45"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp11"
            android:scaleType="fitXY"
            android:src="@drawable/group_icon" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp18"
            android:layout_toRightOf="@id/avatar"
            android:textColor="#0F0F0F"
            android:textSize="@dimen/sp16" />
    </RelativeLayout>

</LinearLayout>