<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp280"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp5"
            android:text="@string/prompt"
            android:textColor="#333"
            android:visibility="visible"
            android:textSize="@dimen/sp20" />

        <TextView
            android:id="@+id/alert_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:layout_marginBottom="@dimen/dp20"
            android:gravity="center_horizontal"
            android:padding="@dimen/dp5"
            android:textColor="#333"
            android:textSize="@dimen/sp18" />

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:singleLine="true"
            android:textColor="#444"
            android:textSize="@dimen/sp16"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/dp160"
            android:layout_height="@dimen/dp160"
            android:scaleType="fitCenter"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
           android:layout_height="@dimen/dp47"
            android:layout_margin="@dimen/dp10"
            android:layout_weight="1"
            android:background="@drawable/btn_cancel_bj"
            android:gravity="center"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="#666666"
            android:textSize="@dimen/sp16"
            android:visibility="gone" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp47"
            android:layout_margin="@dimen/dp10"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_selector"
            android:gravity="center"
            android:onClick="ok"
            android:text="@string/ok"
            android:textColor="#fff"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

</LinearLayout>
